--- a/Example/Podfile
+++ b/Example/Podfile
@@ -6,6 +6,7 @@ target 'RMCircularAlert_Example' do
   target 'RMCircularAlert_Tests' do
     inherit! :search_paths
 
+    pod 'RMCircularAlert', :path => '../'
     pod 'Quick', '~> 1.2.0'
     pod 'Nimble', '~> 7.0.2'
   end
